# pyFANTOM

./: .gitignore  .readthedocs.yml  README.md  env_setup.sh  env_setup_from_wheel.sh  pyproject.toml  requirements.txt
Examples/: PacMan.step
docs/: README.md  README_RTD.md  requirements.txt
docs/source/: citing.rst  conf.py  contributing.rst  getting_started.rst  index.rst
docs/source/api/: index.rst  pyFANTOM.CPU.rst  pyFANTOM.CUDA.rst  pyFANTOM.Physics.rst
docs/source/examples/: 2d_topology_optimization.rst  3d_topology_optimization.rst  mega_voxel_topology_optimization.rst
docs/source/getting_started/: installation.rst  introduction.rst
pyFANTOM/: Physics.py  __init__.py
pyFANTOM/CPU/: Filters.py  FiniteElement.py  Kernels.py  Mesh.py  Optimizers.py  Problems.py  Solvers.py  __init__.py
pyFANTOM/CUDA/: Filters.py  FiniteElement.py  Kernels.py  Mesh.py  Optimizers.py  Problems.py  Solvers.py  __init__.py
pyFANTOM/FiniteElement/: FiniteElement.py
pyFANTOM/FiniteElement/CPU/: FiniteElement.py  NLFiniteElement.py
pyFANTOM/FiniteElement/CUDA/: FiniteElement.py
pyFANTOM/Optimizers/: _optimizer.py
pyFANTOM/Optimizers/CPU/: MMA.py  OC.py  PGD.py
pyFANTOM/Problem/: _problem.py
pyFANTOM/physics/: LinearElasticity.py  LinearSymbolic.py  NLElasticity.py  SteadyHeatTransfer.py  __init__.py  _linelas.py  _physx.py
pyFANTOM/randomizer/: BoundaryConditions2D.py  BoundaryConditions3D.py  ConfigSolve.py  __init__.py
pyFANTOM/visualizers/: _2d.py  _3d.py  __init__.py
scikit-sparse-wheels/: scikit_sparse-0.4.16-cp310-cp310-linux_x86_64.whl
(+55 files in other folders)
